# markdown2rich

./: LICENSE  MANIFEST.in  README.md  markdown-preview-with-rich.el  pyproject.toml
markdown2rich/: __init__.py  cli.py
